--- a/08_events/one.html
+++ b/08_events/one.html
@@ -5,7 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Events</title>
 </head>
-<body>
-    
+<body style="background-color: #414141; color: aliceblue;">
+    <h2>Amazing image</h2>
+    <div >
+        <ul id="images">
+            <li><img width="200px" id="photoshop" src="https://images.pexels.com/photos/3561339/pexels-photo-3561339.jpeg?auto=compress&cs=tinysrgb&w=1600&lazy=load" alt="photoshop"></li>
+            <li><img width="200px" id="japan" src="https://images.pexels.com/photos/3532553/pexels-photo-3532553.jpeg?auto=compress&cs=tinysrgb&w=1600&lazy=load" alt=""></li>
+            <li><img width="200px" id="river" src="https://images.pexels.com/photos/3532551/pexels-photo-3532551.jpeg?auto=compress&cs=tinysrgb&w=1600&lazy=load" alt=""></li>
+            <li><img width="200px" id="owl" src="https://images.pexels.com/photos/3532552/pexels-photo-3532552.jpeg?auto=compress&cs=tinysrgb&w=1600&lazy=load" alt="" ></li>
+            <li><img width="200px" id="prayer" src="https://images.pexels.com/photos/2522671/pexels-photo-2522671.jpeg?auto=compress&cs=tinysrgb&w=1600&lazy=load" alt=""></li>
+            <li><a style="color: aliceblue;" target="_blank" href="https://google.com" id="google">Google</a></li>
+        </ul>
+   </div>
 </body>
+<script>
+    // document.getElementById("owl").onclick = function(){
+    //     alert("Owl clicked");
+    // }
+    //attactEvent()
+    //jQuery - on
+    //Type, timestamp, defaultPrevented
+    //Target, toElement, srcElement, currentTarget,
+    //ClientX, ClientY, ScreenX, ScreenY, 
+    //altKey, ctrlKey, shiftKey, keyCode 
+    //Event Propogation Event bubbling, Event Capturing
+    //true is used for capturing the event in downWards
+
+    // document.getElementById('images').addEventListener('click', function(e){
+    //         console.log("Clicked inside the ul")
+    // }, false)
+
+    // document.getElementById('owl').addEventListener('click', function(e){
+    //         console.log("Owl Clicked")
+    //         e.stopPropagation() //it stops the event bubbling Event bubbling goes upwards
+    // }, false)
+
+    // document.getElementById('google').addEventListener('click', function(e){
+    //     e.preventDefault()
+    //     console.log("google clicked");
+    // }, false)
+
+    document.getElementById('images').addEventListener('click', function(e){
+        console.log(e.target.tagName)
+        if(e.target.tagName === 'IMG' || e.target.tagName === 'A'){
+            console.log(e.target.id)
+            const removeIt = e.target.parentNode
+            removeIt.remove();
+        }
+    }, false)// EventSpilOver 
+    // removeIt.parentNode.removeChild(removeIt);
+
+</script>
 </html>
