--- a/09_advance_one/ApiRequest.html
+++ b/09_advance_one/ApiRequest.html
@@ -16,7 +16,21 @@
     const requestUrl = 'https://api.github.com/users/princesoftlabx'
     const xhr = new XMLHttpRequest()
     xhr.open('GET', requestUrl)
-    console.log(xhr.readyState)
+    xhr.onreadystatechange = function (){
+        console.log(xhr.readyState)
+        if(xhr.readyState === 4){
+            const data = JSON.parse(this.responseText)
+            console.log(data)
+            console.log(data.followers)
+        }
+    }
     xhr.send()
 </script>
+
+
+
+
+
+
+
 </html>
